Add Phase 2: JVM internals - loading, JIT, escape analysis, GC, bytecode
Adds the phase2 module with the three graded rungs (LoaderIdentity,
EscapeProbe, LayoutProbe) plus the exercise's full "GC autopsy kit":
an allocation-heavy workload, a from-scratch parser for G1's unified
JVM logging output, a log-phrase-to-JEP/source citation catalog, and
a CLI report tool turning a captured log into pause histograms,
concurrent-cycle timelines and heap-occupancy curves.

Real findings from building and testing this against actual GC output
captured on this JDK (25.0.1), documented in the code and phase2/README.md
rather than assumed:

- G1, generational ZGC and Shenandoah use structurally different log
  grammars (absolute sizes vs percentages, ms vs s durations, paired
  start/end lines vs single completion lines) - GcLogParser targets
  G1 specifically, matching the artifact's own worked example, and
  GcMultiCollectorSmokeTest forks all three collectors for real but
  only structurally parses G1's output.
- EscapeProbe's "watch allocation collapse to zero" demo is more
  JIT-timing-sensitive in this sandbox than the artifact implies (C2
  compiles the loop but the compiled version can churn rather than
  settle within a short run); the JUnit test asserts the one thing
  that's actually deterministic regardless (sum(n) == 0 for all n).

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01YBMmAx8jLPcj8RLERhL5Do